Initial commit with basic quiz app

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "lodash": "^4.17.11",
+    "spectre.css": "^0.5.8",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
