--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "bytee-quiz",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "Bytee.net <contact@bytee.net> (https://bytee.net)",
   "license": "GPL-3.0",
+  "homepage": "https://github.com/bytee-net/quiz",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/bytee-net/quiz"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
