--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "GPL-3.0",
   "homepage": "https://github.com/bytee-net/quiz",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/bytee-net/quiz"
+    "type": "git",
+    "url": "https://github.com/bytee-net/quiz"
   },
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -20,6 +20,7 @@
     "core-js": "^2.6.5",
     "lodash": "^4.17.11",
     "spectre.css": "^0.5.8",
+    "uuid": "^3.3.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
