--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "bytee-quiz",
-  "version": "0.1.4",
-  "author": "Bytee.net <contact@bytee.net> (https://bytee.net)",
+  "version": "0.1.5",
+  "author": "Yves Hoppe <contact@bytee.net> (https://bytee.net)",
   "license": "GPL-3.0",
-  "homepage": "https://github.com/bytee-net/quiz",
+  "homepage": "https://bytee.net",
   "repository": {
     "type": "git",
     "url": "https://github.com/bytee-net/quiz"
