--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "bytee-quiz",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "author": "Yves Hoppe <contact@bytee.net> (https://bytee.net)",
-  "license": "GPL-3.0",
   "homepage": "https://bytee.net",
+  "keywords": [
+    "quiz",
+    "exam",
+    "test"
+  ],
+  "license": "GPL-3.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/bytee-net/quiz"
@@ -12,6 +17,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit"
   },
@@ -22,6 +28,7 @@
     "spectre.css": "^0.5.8",
     "uuid": "^3.3.3",
     "vue": "^2.6.10",
+    "vue-i18n": "^8.14.1",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
@@ -36,6 +43,7 @@
     "chai": "^4.1.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
+    "vue-cli-plugin-i18n": "^0.6.0",
     "vue-template-compiler": "^2.5.21"
   }
 }
